--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="HRnet is an employee management platform that simplifies the process of creating and managing employee records. Easily create and save employee details, including personal information, addresses, and department affiliations.">
+  <meta name="keywords"
+    content="HRnet, employee management, create employee, HR software, personnel records, employee details, human resources, workforce management">
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
-  <script src="https://kit.fontawesome.com/c52e6629cf.js" crossorigin="anonymous"></script>
   <title>HRnet</title>
 </head>
 
